# orchestra-python-sdk

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ci/: verify_core_package_boundary.py
.github/workflows/: ci.yml  mirror-to-planeon.yml  publish-runtime-artifacts.yml  publish.yml  release.yml  runtime-published-install.yml  runtime-published-upgrade-rollback.yml
deploy/reference-runtime/: Dockerfile  Dockerfile.ubi  README.md  compatibility-baselines.json  compose.yaml  config.example.json  config.mcp.example.json  config.pull.example.json  topology-profiles.json  topology-profiles.mcp.json
deploy/reference-runtime/chart/: .helmignore  Chart.yaml  values.mcp.example.yaml  values.openshift-production.yaml  values.production.example.yaml  values.yaml
deploy/reference-runtime/chart/templates/: NOTES.txt  _helpers.tpl  backup-cronjob.yaml  compatibility-job.yaml  deployment.yaml  hpa.yaml  migration-job.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
deploy/reference-runtime/ci/: install-k3d.sh  published-upgrade-rollback.sh  published_upgrade_fixture.py  resolve-published-release.sh  topology-certification.sh  topology_fixture.py  topology_mcp_server.py  topology_probe.py  upgrade-rollback-drill.sh  verified-k3d-image-import.sh
deploy/reference-runtime/operations/: backup-postgres.sh  restore-postgres.sh
examples/: aml_instrumentation.py  crewai_quickstart.py  data_flow_refs.py  langchain_quickstart.py  mcp_vector_quickstart.py  openai_agents_quickstart.py  quickstart.py  runtime_conformance_command_driver.py  runtime_kernel_quickstart.py
prisma/migrations/20260417190000_prompt_capture_mode/: migration.sql
prometa/: __init__.py  _context.py  _raw_channel.py  attributes.py  authz.py  budget.py  chain.py  client.py  decorators.py  events.py  feedback.py  guardrails.py  intent.py  memory.py  prompt.py  reasoning.py  refs.py  resilience.py  retrieval.py  reviewer.py  routing.py  sentiment.py  session.py
prometa/integrations/: __init__.py  _llm_common.py  anthropic.py  crewai.py  google.py  langchain.py  langgraph.py  mcp.py  openai.py  openai_agents.py  openllmetry.py  semantic_kernel.py  vector.py
prometa/runtime/: __init__.py  admission.py  conformance.py  control_plane.py  host.py  host_conformance.py  kernel.py  mcp.py  model_gateway.py  postgres.py  receipts.py  tasks.py  trust.py
prometa/runtime/fixtures/: __init__.py  runtime-kernel-v1.json
scripts/: sync_runtime_release_version.py  verify_runtime_release_contract.sh
tests/: runtime_mcp_stdio_server.py  runtime_recovery_host_process.py  runtime_upgrade_host_process.py  test_agent_id_resolution.py  test_agent_name_resolution.py  test_chain_attrs.py  test_feedback_attrs.py  test_intent_attrs.py  test_langchain_integration.py  test_mcp_integration.py  test_openllmetry_bridge.py  test_promotion_attestation.py  test_runtime_admission.py  test_runtime_conformance.py  test_runtime_control_plane.py  test_runtime_deploy_assets.py  test_runtime_host.py  test_runtime_host_tls.py  test_runtime_kernel.py  test_runtime_mcp.py  test_runtime_mcp_transport.py  test_runtime_model_gateway.py  test_runtime_postgres.py  test_runtime_published_upgrade.py  test_runtime_receipts.py  test_runtime_recovery.py  test_runtime_release_assets.py  test_runtime_tasks.py  test_runtime_topology_assets.py  test_runtime_trust.py  test_runtime_upgrade_rollback.py
tests/fixtures/: bundle-envelope-v1.json  promotion-attestation-review-v1.json  promotion-attestation-v1.json  runtime-kernel-v2.json  runtime-release-handoff-v1.json
