[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prometa-sdk"
version = "0.1.2"
description = "Official Python SDK for the Prometa Agentic Lifecycle Intelligence Platform"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Prometa" }]
keywords = ["observability", "agents", "llm", "opentelemetry", "genai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
openai = ["openai>=1.0"]
dev = ["pytest>=7", "ruff>=0.5"]

[project.urls]
Homepage = "https://prometa.io"
Documentation = "https://prometa.io/docs/sdk/python"
Source = "https://github.com/prometa/prometa-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["prometa"]
