[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prometa-sdk"
version = "0.18.1"
description = "Official Python SDK for the Prometa Agentic Lifecycle Intelligence Platform"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Prometa" }]
keywords = ["observability", "agents", "llm", "opentelemetry", "genai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
google = ["google-genai>=0.3"]
openllmetry = [
    "opentelemetry-sdk>=1.38,<2; python_version >= '3.10'",
    "opentelemetry-instrumentation-openai>=0.60,<1; python_version >= '3.10'",
    "opentelemetry-instrumentation-anthropic>=0.60,<1; python_version >= '3.10'",
    "opentelemetry-instrumentation-langchain>=0.60,<1; python_version >= '3.10'",
    "opentelemetry-instrumentation-chromadb>=0.60,<1; python_version >= '3.10'",
    "opentelemetry-instrumentation-pinecone>=0.60,<1; python_version >= '3.10'",
]
openllmetry-all = [
    "opentelemetry-sdk>=1.38,<2; python_version >= '3.10'",
    "opentelemetry-instrumentation-openai>=0.60,<1; python_version >= '3.10'",
    "opentelemetry-instrumentation-anthropic>=0.60,<1; python_version >= '3.10'",
    "opentelemetry-instrumentation-langchain>=0.60,<1; python_version >= '3.10'",
    "opentelemetry-instrumentation-chromadb>=0.60,<1; python_version >= '3.10'",
    "opentelemetry-instrumentation-pinecone>=0.60,<1; python_version >= '3.10'",
    "opentelemetry-instrumentation-bedrock>=0.60,<1; python_version >= '3.10'",
    "opentelemetry-instrumentation-cohere>=0.60,<1; python_version >= '3.10'",
    "opentelemetry-instrumentation-haystack>=0.60,<1; python_version >= '3.10'",
    "opentelemetry-instrumentation-llamaindex>=0.60,<1; python_version >= '3.10'",
]
runtime = ["cryptography>=42", "jsonschema>=4.23,<5"]
runtime-mcp = [
    "cryptography>=42",
    "jsonschema>=4.23,<5",
    "mcp>=1.28.1,<2; python_version >= '3.10'",
]
runtime-postgres = [
    "cryptography>=42",
    "jsonschema>=4.23,<5",
    "psycopg[binary]>=3.2,<4",
]
runtime-host = [
    "cryptography>=42",
    "jsonschema>=4.23,<5",
    "psycopg[binary]>=3.2,<4",
]
dev = ["pytest>=7", "ruff>=0.5"]

[project.scripts]
prometa-runtime-conformance = "prometa.runtime.conformance:main"
prometa-runtime-postgres-init = "prometa.runtime.postgres:main"
prometa-runtime-postgres-compatibility = "prometa.runtime.postgres:compatibility_main"
prometa-runtime-postgres-verify = "prometa.runtime.postgres:verify_main"
prometa-runtime-host = "prometa.runtime.host:main"
prometa-runtime-host-conformance-driver = "prometa.runtime.host_conformance:main"

[project.urls]
Homepage = "https://prometa.io"
Documentation = "https://prometa.io/docs/sdk/python"
Source = "https://github.com/prometa-ai/orchestra-python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["prometa"]
